css/style.css
/* ... */
.dummy-hover-answers{
  display: none;
}

.dummy-hover-questions{
  display: none;
}

.hover-text{
   /*#ff00d8*/
  color: #4A90E2;
  background-color:yellow;
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 5px;
  padding-bottom: 400%;
}

.hover-active{
  display: inline;
  position: absolute;
  top: 0%;
  left: 85%;
}

.swiper-text-hidden {
  display: none;
}

/* hover tooltip project name */

.tooltip {
    position: relative;
    display: inline-block;
    /*border-bottom: 1px dotted black;*/
}

.tooltip .tooltiptext {
    font-family: fedraSansBookSC;
    /*font-weight: bold;*/
    visibility: hidden;
    width: 120%;
    background-color: yellow;
    color: #4A90E2;
    text-align:left;
    /*border-radius: 6px;*/
    padding: 5px;

    /* Position the tooltip */
    position: absolute;
    z-index: 1;
}

.tooltip:hover .tooltiptext {
    visibility: visible;
}

.hide{
  transform: scale(0);
  width:0;
  padding:0;
  display: none;
  /*-webkit-transition: width 2s, height 4s;*/
  transition: all 0.2s ease-in-out;
}

